--- a/Clouds/Clouds.csproj
+++ b/Clouds/Clouds.csproj
@@ -51,6 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CloudShader.txt" />
+    <Content Include="undersideCloudShader.txt" />
+    <EmbeddedResource Include="undersideCompiledCloudShader.txt" />
     <EmbeddedResource Include="CompiledCloudShader.txt" />
   </ItemGroup>
   <ItemGroup>
