Fixed Overlap, updated Shaders.

--- a/GameData/BoulderCo/Clouds/cloudLayers.cfg
+++ b/GameData/BoulderCo/Clouds/cloudLayers.cfg
@@ -1,11 +1,57 @@
 CLOUD_LAYER
 {
+	body = Laythe
+	radius = 1.006
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/kerbin1
+		detail = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+	}
+	color
+	{
+		r = 1
+		g = 1
+		b = 1
+	}
+	speed = .00001
+}
+
+CLOUD_LAYER
+{
+	body = Duna
+	radius = 1.03
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/eve1
+		detail = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+	}
+	color
+	{
+		r = 0.694
+		g = 0.62
+		b = 0.567
+	}
+	speed = .000030
+}
+
+CLOUD_LAYER
+{
 	body = Kerbin
 	radius = 1.004
 	textures
 	{
 		main = BoulderCo/Clouds/Textures/kerbin1
-		mixer = BoulderCo/Clouds/Textures/mixer1
+		detail = BoulderCo/Clouds/Textures/detail1
 		offset
 		{
 			x = 0
@@ -28,8 +74,7 @@ CLOUD_LAYER
 	textures
 	{
 		main = BoulderCo/Clouds/Textures/kerbin1
-		mixer = BoulderCo/Clouds/Textures/mixer1
-		fader = BoulderCo/Clouds/Textures/fader1
+		detail = BoulderCo/Clouds/Textures/detail1
 		offset
 		{
 			x = .3
@@ -43,4 +88,188 @@ CLOUD_LAYER
 		b = 1
 	}
 	speed = .00003
+}
+
+CLOUD_LAYER
+{
+	body = Eve
+	radius = 1.004
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/eve1
+		detail = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = .5
+			y = 0
+		}
+	}
+	color
+	{
+		r = 0.314
+		g = 0.216
+		b = 0.435
+	}
+	speed = .002
+}
+
+CLOUD_LAYER
+{
+	body = Eve
+	radius = 1.02
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/eve1
+		detail = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+	}
+	color
+	{
+		r = 0.314
+		g = 0.216
+		b = 0.435
+	}
+	speed = .0004
+}
+
+CLOUD_LAYER
+{
+	body = Eve
+	radius = 1.027
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/eve1
+		detail = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .5
+			y = 0
+		}
+	}
+	color
+	{
+		r = 0.411
+		g = 0.204
+		b = 0.663
+	}
+	speed = .0001
+}
+
+CLOUD_LAYER
+{
+	body = Eve
+	radius = 1.035
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/eve1
+		detail = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+	}
+	color
+	{
+		r = 0.411
+		g = 0.204
+		b = 0.663
+	}
+	speed = .0002
+}
+
+CLOUD_LAYER
+{
+	body = Eve
+	radius = 1.042
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/eve1
+		detail = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .6
+			y = 0
+		}
+	}
+	color
+	{
+		r = 0.643
+		g = 0.424
+		b = 0.914
+	}
+	speed = .0004
+}
+
+CLOUD_LAYER
+{
+	body = Jool
+	radius = 1.008
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/Jool1
+		detail = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+	}
+	color
+	{
+		r = 0.102
+		g = 0.169
+		b = 0.063
+	}
+	speed = .000005
+}
+
+CLOUD_LAYER
+{
+	body = Jool
+	radius = 1.013
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/JoolLayers1
+		detail = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+	}
+	color
+	{
+		r = 0.31
+		g = 0.467
+		b = 0.224
+	}
+	speed = .000065
+}
+
+CLOUD_LAYER
+{
+	body = Jool
+	radius = 1.018
+	textures
+	{
+		main = BoulderCo/Clouds/Textures/JoolLayers2
+		detail = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+	}
+	color
+	{
+		r = 0.31
+		g = 0.467
+		b = 0.224
+	}
+	speed = .00002
 }
