--- a/GameData/BoulderCo/Clouds/cloudLayers.cfg
+++ b/GameData/BoulderCo/Clouds/cloudLayers.cfg
@@ -2,14 +2,42 @@ CLOUD_LAYER
 {
 	body = Laythe
 	radius = 1.006
-	textures
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/kerbin1
-		detail = BoulderCo/Clouds/Textures/detail1
+		file = BoulderCo/Clouds/Textures/kerbin1
 		offset
 		{
 			x = 0
 			y = 0
+		}
+		speed
+		{
+			x = .00001
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+		speed
+		{
+			x = .00001
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -18,21 +46,48 @@ CLOUD_LAYER
 		g = 1
 		b = 1
 	}
-	speed = .00001
 }
 
 CLOUD_LAYER
 {
 	body = Duna
 	radius = 1.03
-	textures
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/eve1
-		detail = BoulderCo/Clouds/Textures/detail1
+		file = BoulderCo/Clouds/Textures/kerbin2
 		offset
 		{
 			x = .3
 			y = 0
+		}
+		speed
+		{
+			x = .000030
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000030
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -41,21 +96,48 @@ CLOUD_LAYER
 		g = 0.62
 		b = 0.567
 	}
-	speed = .000030
 }
 
 CLOUD_LAYER
 {
 	body = Kerbin
 	radius = 1.004
-	textures
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/kerbin1
-		detail = BoulderCo/Clouds/Textures/detail1
+		file = BoulderCo/Clouds/Textures/kerbin1
 		offset
 		{
-			x = 0
+			x = .3
 			y = 0
+		}
+		speed
+		{
+			x = .000025
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000025
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -64,21 +146,48 @@ CLOUD_LAYER
 		g = 1
 		b = 1
 	}
-	speed = .000025
 }
 
 CLOUD_LAYER
 {
 	body = Kerbin
 	radius = 1.008
-	textures
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/kerbin2
-		detail = BoulderCo/Clouds/Textures/detail1
+		file = BoulderCo/Clouds/Textures/kerbin2
 		offset
 		{
 			x = .3
 			y = 0
+		}
+		speed
+		{
+			x = .000030
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000030
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -87,21 +196,48 @@ CLOUD_LAYER
 		g = 1
 		b = 1
 	}
-	speed = .00003
 }
 
 CLOUD_LAYER
 {
 	body = Eve
 	radius = 1.004
-	textures
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/eve1
-		detail = BoulderCo/Clouds/Textures/detaileve1
+		file = BoulderCo/Clouds/Textures/eve1
 		offset
 		{
 			x = .5
 			y = 0
+		}
+		speed
+		{
+			x = .002
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = .5
+			y = 0
+		}
+		speed
+		{
+			x = .002
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -110,21 +246,48 @@ CLOUD_LAYER
 		g = 0.216
 		b = 0.435
 	}
-	speed = .002
 }
 
 CLOUD_LAYER
 {
 	body = Eve
 	radius = 1.02
-	textures
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/eve1
-		detail = BoulderCo/Clouds/Textures/detaileve1
+		file = BoulderCo/Clouds/Textures/eve1
 		offset
 		{
 			x = 0
 			y = 0
+		}
+		speed
+		{
+			x = .004
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+		speed
+		{
+			x = .004
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -133,21 +296,48 @@ CLOUD_LAYER
 		g = 0.216
 		b = 0.435
 	}
-	speed = .0004
 }
 
 CLOUD_LAYER
 {
 	body = Eve
 	radius = 1.027
-	textures
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/eve1
-		detail = BoulderCo/Clouds/Textures/detail1
+		file = BoulderCo/Clouds/Textures/eve1
 		offset
 		{
-			x = .5
+			x = .25
 			y = 0
+		}
+		speed
+		{
+			x = .001
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = .25
+			y = 0
+		}
+		speed
+		{
+			x = .001
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -156,21 +346,48 @@ CLOUD_LAYER
 		g = 0.204
 		b = 0.663
 	}
-	speed = .0001
 }
 
 CLOUD_LAYER
 {
 	body = Eve
 	radius = 1.035
-	textures
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/eve1
-		detail = BoulderCo/Clouds/Textures/detail1
+		file = BoulderCo/Clouds/Textures/eve1
 		offset
 		{
-			x = .3
+			x = .75
 			y = 0
+		}
+		speed
+		{
+			x = .002
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = .75
+			y = 0
+		}
+		speed
+		{
+			x = .002
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -179,21 +396,48 @@ CLOUD_LAYER
 		g = 0.204
 		b = 0.663
 	}
-	speed = .0002
 }
 
 CLOUD_LAYER
 {
 	body = Eve
 	radius = 1.042
-	textures
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/eve1
-		detail = BoulderCo/Clouds/Textures/detail1
+		file = BoulderCo/Clouds/Textures/eve1
 		offset
 		{
-			x = .6
+			x = 0
+			y = 0.5
+		}
+		speed
+		{
+			x = .0004
 			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0
+			y = 0.5
+		}
+		speed
+		{
+			x = .0004
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -202,21 +446,48 @@ CLOUD_LAYER
 		g = 0.424
 		b = 0.914
 	}
-	speed = .0004
 }
 
 CLOUD_LAYER
 {
 	body = Jool
-	radius = 1.010
-	textures
+	radius = 1.008
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/Jool1
-		detail = BoulderCo/Clouds/Textures/detaileve1
+		file = BoulderCo/Clouds/Textures/jool1
 		offset
 		{
 			x = 0
 			y = 0
+		}
+		speed
+		{
+			x = .000005
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+		speed
+		{
+			x = .000005
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
 		}
 	}
 	color
@@ -225,51 +496,104 @@ CLOUD_LAYER
 		g = 0.169
 		b = 0.063
 	}
-	speed = .000005
 }
 
 CLOUD_LAYER
 {
 	body = Jool
-	radius = 1.02
-	textures
+	radius = 1.013
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/JoolLayers1
-		detail = BoulderCo/Clouds/Textures/detaileve1
+		file = BoulderCo/Clouds/Textures/joolLayers1
 		offset
 		{
 			x = 0
 			y = 0
 		}
+		speed
+		{
+			x = .000065
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = .25
+			y = 0
+		}
+		speed
+		{
+			x = .000065
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
+		}
 	}
 	color
 	{
-		r = 0.31
-		g = 0.467
-		b = 0.224
+		r = 0.102
+		g = 0.169
+		b = 0.063
 	}
-	speed = .000065
 }
 
 CLOUD_LAYER
 {
 	body = Jool
-	radius = 1.03
-	textures
+	radius = 1.018
+	main_texture
 	{
-		main = BoulderCo/Clouds/Textures/JoolLayers2
-		detail = BoulderCo/Clouds/Textures/detaileve1
+		file = BoulderCo/Clouds/Textures/joolLayers2
 		offset
 		{
 			x = 0
 			y = 0
 		}
+		speed
+		{
+			x = .00002
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = .25
+			y = 0
+		}
+		speed
+		{
+			x = .00002
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
+		}
 	}
 	color
 	{
-		r = 0.31
-		g = 0.467
-		b = 0.224
+		r = 0.102
+		g = 0.169
+		b = 0.063
 	}
-	speed = .00002
 }
