Added Bump, New Planet Config Items
CityLight config items
Main Menu Display

--- a/GameData/BoulderCo/Clouds/cloudLayers.cfg
+++ b/GameData/BoulderCo/Clouds/cloudLayers.cfg
@@ -140,6 +140,25 @@ CLOUD_LAYER
 			y = 100
 		}
 	}
+	bump_texture
+	{
+		file = BoulderCo/Clouds/Textures/bump1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000025
+			y = 0
+		}
+		scale
+		{
+			x = 90
+			y = 90
+		}
+	}
 	color
 	{
 		r = 1
@@ -188,6 +207,25 @@ CLOUD_LAYER
 		{
 			x = 100
 			y = 100
+		}
+	}
+	bump_texture
+	{
+		file = BoulderCo/Clouds/Textures/bump1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000025
+			y = 0
+		}
+		scale
+		{
+			x = 90
+			y = 90
 		}
 	}
 	color
@@ -551,6 +589,344 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Jool
+	radius = 1.018
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/joolLayers2
+		offset
+		{
+			x = 0
+			y = 0
+		}
+		speed
+		{
+			x = .00002
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = .25
+			y = 0
+		}
+		speed
+		{
+			x = .00002
+			y = 0
+		}
+		scale
+		{
+			x = 1000
+			y = 1000
+		}
+	}
+	color
+	{
+		r = 0.102
+		g = 0.169
+		b = 0.063
+	}
+}
+
+CLOUD_LAYER
+{
+	body = Skelton
+	radius = 1.03
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/kerbin2
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000030
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000030
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
+		}
+	}
+	color
+	{
+		r = 0.694
+		g = 0.62
+		b = 0.567
+	}
+}
+
+CLOUD_LAYER
+{
+	body = Erin
+	radius = 1.004
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/kerbin1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000025
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000025
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
+		}
+	}
+	bump_texture
+	{
+		file = BoulderCo/Clouds/Textures/bump1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000025
+			y = 0
+		}
+		scale
+		{
+			x = 90
+			y = 90
+		}
+	}
+	color
+	{
+		r = 1
+		g = 1
+		b = 1
+	}
+}
+
+CLOUD_LAYER
+{
+	body = Erin
+	radius = 1.008
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/kerbin2
+		offset
+		{
+			x = 0
+			y = 0
+		}
+		speed
+		{
+			x = .000030
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = .5
+			y = 0
+		}
+		speed
+		{
+			x = .000030
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
+		}
+	}
+	bump_texture
+	{
+		file = BoulderCo/Clouds/Textures/bump1
+		offset
+		{
+			x = .3
+			y = 0
+		}
+		speed
+		{
+			x = .000025
+			y = 0
+		}
+		scale
+		{
+			x = 90
+			y = 90
+		}
+	}
+	color
+	{
+		r = 1
+		g = 1
+		b = 1
+	}
+}
+
+CLOUD_LAYER
+{
+	body = Sentar
+	radius = 1.008
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/jool1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+		speed
+		{
+			x = .000005
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+		speed
+		{
+			x = .000005
+			y = 0
+		}
+		scale
+		{
+			x = 1000
+			y = 1000
+		}
+	}
+	color
+	{
+		r = 0.102
+		g = 0.169
+		b = 0.063
+	}
+}
+
+CLOUD_LAYER
+{
+	body = Sentar
+	radius = 1.013
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/joolLayers1
+		offset
+		{
+			x = 0
+			y = 0
+		}
+		speed
+		{
+			x = .000065
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = .25
+			y = 0
+		}
+		speed
+		{
+			x = .000065
+			y = 0
+		}
+		scale
+		{
+			x = 1000
+			y = 1000
+		}
+	}
+	color
+	{
+		r = 0.102
+		g = 0.169
+		b = 0.063
+	}
+}
+
+CLOUD_LAYER
+{
+	body = Sentar
 	radius = 1.018
 	main_texture
 	{
