--- a/Clouds/Clouds.csproj
+++ b/Clouds/Clouds.csproj
@@ -61,6 +61,9 @@
       <Name>CommonUtils</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="particle_system.prefab" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y $(TargetFileName) "$(SolutionDir)GameData\BoulderCo\Plugins\"
