Gui Complete. Shaders input updated.

--- a/GameData/BoulderCo/Clouds/cloudLayers.cfg
+++ b/GameData/BoulderCo/Clouds/cloudLayers.cfg
@@ -2,17 +2,23 @@ CLOUD_LAYER
 {
 	body = Laythe
 	radius = 1.006
+	color
+	{
+		r = 0.4
+		g = 0.4
+		b = 0.6
+	}
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/kerbin1
 		offset
 		{
-			x = 0
+			x = 0.002109109
 			y = 0
 		}
 		speed
 		{
-			x = .00001
+			x = 1E-05
 			y = 0
 		}
 		scale
@@ -26,12 +32,12 @@ CLOUD_LAYER
 		file = BoulderCo/Clouds/Textures/detail1
 		offset
 		{
-			x = 0
+			x = 0.002109109
 			y = 0
 		}
 		speed
 		{
-			x = .00001
+			x = 1E-05
 			y = 0
 		}
 		scale
@@ -40,148 +46,28 @@ CLOUD_LAYER
 			y = 100
 		}
 	}
-	color
-	{
-		r = 0.4
-		g = 0.4
-		b = 0.60
-	}
 }
-
 CLOUD_LAYER
 {
 	body = Duna
 	radius = 1.03
-	main_texture
-	{
-		file = BoulderCo/Clouds/Textures/duna1
-		offset
-		{
-			x = .3
-			y = 0
-		}
-		speed
-		{
-			x = .000030
-			y = 0
-		}
-		scale
-		{
-			x = 2
-			y = 1
-		}
-	}
-	detail_texture
-	{
-		file = BoulderCo/Clouds/Textures/detail1
-		offset
-		{
-			x = .3
-			y = 0
-		}
-		speed
-		{
-			x = .000030
-			y = 0
-		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
-	}
 	color
 	{
 		r = 0.38
 		g = 0.16
 		b = 0.098
 	}
-}
-
-CLOUD_LAYER
-{
-	body = Kerbin
-	radius = 1.004
 	main_texture
 	{
-		file = BoulderCo/Clouds/Textures/kerbin1
+		file = BoulderCo/Clouds/Textures/duna1
 		offset
 		{
-			x = .3
+			x = 0.3063397
 			y = 0
 		}
 		speed
 		{
-			x = .000025
-			y = 0
-		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
-	}
-	detail_texture
-	{
-		file = BoulderCo/Clouds/Textures/detail1
-		offset
-		{
-			x = .3
-			y = 0
-		}
-		speed
-		{
-			x = .000025
-			y = 0
-		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
-	}
-	bump_texture
-	{
-		file = BoulderCo/Clouds/Textures/bump1
-		offset
-		{
-			x = .3
-			y = 0
-		}
-		speed
-		{
-			x = .000025
-			y = 0
-		}
-		scale
-		{
-			x = 90
-			y = 90
-		}
-	}
-	color
-	{
-		r = 1
-		g = 1
-		b = 1
-	}
-}
-
-CLOUD_LAYER
-{
-	body = Kerbin
-	radius = 1.008
-	main_texture
-	{
-		file = BoulderCo/Clouds/Textures/kerbin2
-		offset
-		{
-			x = 0
-			y = 0
-		}
-		speed
-		{
-			x = .000030
+			x = 3E-05
 			y = 0
 		}
 		scale
@@ -195,12 +81,61 @@ CLOUD_LAYER
 		file = BoulderCo/Clouds/Textures/detail1
 		offset
 		{
-			x = .5
+			x = 0.3063397
 			y = 0
 		}
 		speed
 		{
-			x = .000030
+			x = 3E-05
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
+		}
+	}
+}
+CLOUD_LAYER
+{
+	body = Kerbin
+	radius = 1.004
+	color
+	{
+		r = 1
+		g = 1
+		b = 1
+	}
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/kerbin1
+		offset
+		{
+			x = 0.3052678
+			y = 0
+		}
+		speed
+		{
+			x = 2.5E-05
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = 0.3052678
+			y = 0
+		}
+		speed
+		{
+			x = 2.5E-05
 			y = 0
 		}
 		scale
@@ -214,12 +149,12 @@ CLOUD_LAYER
 		file = BoulderCo/Clouds/Textures/bump1
 		offset
 		{
-			x = .3
+			x = 0.3052678
 			y = 0
 		}
 		speed
 		{
-			x = .000030
+			x = 2.5E-05
 			y = 0
 		}
 		scale
@@ -228,29 +163,96 @@ CLOUD_LAYER
 			y = 90
 		}
 	}
+}
+CLOUD_LAYER
+{
+	body = Kerbin
+	radius = 1.008
 	color
 	{
 		r = 0.909
 		g = 0.909
 		b = 0.878
 	}
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/kerbin2
+		offset
+		{
+			x = 0.006327354
+			y = 0
+		}
+		speed
+		{
+			x = 3E-05
+			y = 0
+		}
+		scale
+		{
+			x = 2
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detail1
+		offset
+		{
+			x = 0.5062734
+			y = 0
+		}
+		speed
+		{
+			x = 3E-05
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
+		}
+	}
+	bump_texture
+	{
+		file = BoulderCo/Clouds/Textures/bump1
+		offset
+		{
+			x = 0.3063397
+			y = 0
+		}
+		speed
+		{
+			x = 3E-05
+			y = 0
+		}
+		scale
+		{
+			x = 90
+			y = 90
+		}
+	}
 }
-
 CLOUD_LAYER
 {
 	body = Eve
 	radius = 1.004
+	color
+	{
+		r = 0.314
+		g = 0.216
+		b = 0.435
+	}
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/eve1
 		offset
 		{
-			x = .5
+			x = 0.9218211
 			y = 0
 		}
 		speed
 		{
-			x = .002
+			x = 0.002
 			y = 0
 		}
 		scale
@@ -264,12 +266,12 @@ CLOUD_LAYER
 		file = BoulderCo/Clouds/Textures/detaileve1
 		offset
 		{
-			x = .5
+			x = 0.9218211
 			y = 0
 		}
 		speed
 		{
-			x = .002
+			x = 0.002
 			y = 0
 		}
 		scale
@@ -278,79 +280,77 @@ CLOUD_LAYER
 			y = 100
 		}
 	}
-	color
-	{
-		r = 0.314
-		g = 0.216
-		b = 0.435
-	}
 }
-
 CLOUD_LAYER
 {
 	body = Eve
 	radius = 1.02
-	main_texture
-	{
-		file = BoulderCo/Clouds/Textures/eve1
-		offset
-		{
-			x = 0
-			y = 0
-		}
-		speed
-		{
-			x = .004
-			y = 0
-		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
-	}
-	detail_texture
-	{
-		file = BoulderCo/Clouds/Textures/detaileve1
-		offset
-		{
-			x = 0
-			y = 0
-		}
-		speed
-		{
-			x = .004
-			y = 0
-		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
-	}
 	color
 	{
 		r = 0.314
 		g = 0.216
 		b = 0.435
 	}
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/eve1
+		offset
+		{
+			x = 0.8436421
+			y = 0
+		}
+		speed
+		{
+			x = 0.004
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0.8436421
+			y = 0
+		}
+		speed
+		{
+			x = 0.004
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
+		}
+	}
 }
-
 CLOUD_LAYER
 {
 	body = Eve
 	radius = 1.027
+	color
+	{
+		r = 0.411
+		g = 0.204
+		b = 0.663
+	}
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/eve1
 		offset
 		{
-			x = .25
+			x = 0.4609106
 			y = 0
 		}
 		speed
 		{
-			x = .001
+			x = 0.001
 			y = 0
 		}
 		scale
@@ -364,12 +364,12 @@ CLOUD_LAYER
 		file = BoulderCo/Clouds/Textures/detaileve1
 		offset
 		{
-			x = .25
+			x = 0.4609106
 			y = 0
 		}
 		speed
 		{
-			x = .001
+			x = 0.001
 			y = 0
 		}
 		scale
@@ -378,79 +378,28 @@ CLOUD_LAYER
 			y = 100
 		}
 	}
-	color
-	{
-		r = 0.411
-		g = 0.204
-		b = 0.663
-	}
 }
-
 CLOUD_LAYER
 {
 	body = Eve
 	radius = 1.035
-	main_texture
-	{
-		file = BoulderCo/Clouds/Textures/eve1
-		offset
-		{
-			x = .75
-			y = 0
-		}
-		speed
-		{
-			x = .002
-			y = 0
-		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
-	}
-	detail_texture
-	{
-		file = BoulderCo/Clouds/Textures/detaileve1
-		offset
-		{
-			x = .75
-			y = 0
-		}
-		speed
-		{
-			x = .002
-			y = 0
-		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
-	}
 	color
 	{
 		r = 0.411
 		g = 0.204
 		b = 0.663
 	}
-}
-
-CLOUD_LAYER
-{
-	body = Eve
-	radius = 1.042
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/eve1
 		offset
 		{
-			x = 0
-			y = 0.5
+			x = 0.1718219
+			y = 0
 		}
 		speed
 		{
-			x = .0004
+			x = 0.002
 			y = 0
 		}
 		scale
@@ -464,12 +413,12 @@ CLOUD_LAYER
 		file = BoulderCo/Clouds/Textures/detaileve1
 		offset
 		{
-			x = 0
-			y = 0.5
+			x = 0.1718219
+			y = 0
 		}
 		speed
 		{
-			x = .0004
+			x = 0.002
 			y = 0
 		}
 		scale
@@ -478,29 +427,77 @@ CLOUD_LAYER
 			y = 100
 		}
 	}
+}
+CLOUD_LAYER
+{
+	body = Eve
+	radius = 1.042
 	color
 	{
 		r = 0.643
 		g = 0.424
 		b = 0.914
 	}
+	main_texture
+	{
+		file = BoulderCo/Clouds/Textures/eve1
+		offset
+		{
+			x = 0.08436437
+			y = 0.5
+		}
+		speed
+		{
+			x = 0.0004
+			y = 0
+		}
+		scale
+		{
+			x = 1
+			y = 1
+		}
+	}
+	detail_texture
+	{
+		file = BoulderCo/Clouds/Textures/detaileve1
+		offset
+		{
+			x = 0.08436437
+			y = 0.5
+		}
+		speed
+		{
+			x = 0.0004
+			y = 0
+		}
+		scale
+		{
+			x = 100
+			y = 100
+		}
+	}
 }
-
 CLOUD_LAYER
 {
 	body = Jool
 	radius = 1.008
+	color
+	{
+		r = 0.102
+		g = 0.169
+		b = 0.063
+	}
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/jool1
 		offset
 		{
-			x = 0
+			x = 0.001054554
 			y = 0
 		}
 		speed
 		{
-			x = .000005
+			x = 5E-06
 			y = 0
 		}
 		scale
@@ -514,12 +511,12 @@ CLOUD_LAYER
 		file = BoulderCo/Clouds/Textures/detaileve1
 		offset
 		{
-			x = 0
+			x = 0.001054554
 			y = 0
 		}
 		speed
 		{
-			x = .000005
+			x = 5E-06
 			y = 0
 		}
 		scale
@@ -528,29 +525,28 @@ CLOUD_LAYER
 			y = 1000
 		}
 	}
+}
+CLOUD_LAYER
+{
+	body = Jool
+	radius = 1.013
 	color
 	{
 		r = 0.102
 		g = 0.169
 		b = 0.063
 	}
-}
-
-CLOUD_LAYER
-{
-	body = Jool
-	radius = 1.013
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/joolLayers1
 		offset
 		{
-			x = 0
+			x = 0.01370921
 			y = 0
 		}
 		speed
 		{
-			x = .000065
+			x = 6.5E-05
 			y = 0
 		}
 		scale
@@ -564,12 +560,12 @@ CLOUD_LAYER
 		file = BoulderCo/Clouds/Textures/detaileve1
 		offset
 		{
-			x = .25
+			x = 0.2637106
 			y = 0
 		}
 		speed
 		{
-			x = .000065
+			x = 6.5E-05
 			y = 0
 		}
 		scale
@@ -578,29 +574,28 @@ CLOUD_LAYER
 			y = 1000
 		}
 	}
+}
+CLOUD_LAYER
+{
+	body = Jool
+	radius = 1.018
 	color
 	{
 		r = 0.102
 		g = 0.169
 		b = 0.063
 	}
-}
-
-CLOUD_LAYER
-{
-	body = Jool
-	radius = 1.018
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/joolLayers2
 		offset
 		{
-			x = 0
+			x = 0.004218218
 			y = 0
 		}
 		speed
 		{
-			x = .00002
+			x = 2E-05
 			y = 0
 		}
 		scale
@@ -614,12 +609,12 @@ CLOUD_LAYER
 		file = BoulderCo/Clouds/Textures/detaileve1
 		offset
 		{
-			x = .25
+			x = 0.2541884
 			y = 0
 		}
 		speed
 		{
-			x = .00002
+			x = 2E-05
 			y = 0
 		}
 		scale
@@ -628,13 +623,9 @@ CLOUD_LAYER
 			y = 1000
 		}
 	}
-	color
-	{
-		r = 0.102
-		g = 0.169
-		b = 0.063
-	}
 }
+
+//Krag's Planet Factory Planets. 
 
 CLOUD_LAYER
 {
