--- a/GameData/BoulderCo/Clouds/cloudLayers.cfg
+++ b/GameData/BoulderCo/Clouds/cloudLayers.cfg
@@ -23,11 +23,6 @@ CLOUD_LAYER
 			x = 1E-05
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -42,11 +37,7 @@ CLOUD_LAYER
 			x = 1E-05
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 }
 CLOUD_LAYER
@@ -72,11 +63,6 @@ CLOUD_LAYER
 			x = 3E-05
 			y = 0
 		}
-		scale
-		{
-			x = 2
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -91,11 +77,7 @@ CLOUD_LAYER
 			x = 3E-05
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 }
 CLOUD_LAYER
@@ -121,11 +103,6 @@ CLOUD_LAYER
 			x = 2.5E-05
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -140,11 +117,7 @@ CLOUD_LAYER
 			x = 2.5E-05
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 	bump_texture
 	{
@@ -159,11 +132,7 @@ CLOUD_LAYER
 			x = 2.5E-05
 			y = 0
 		}
-		scale
-		{
-			x = 90
-			y = 90
-		}
+		scale = 90
 	}
 }
 CLOUD_LAYER
@@ -189,11 +158,6 @@ CLOUD_LAYER
 			x = 3E-05
 			y = 0
 		}
-		scale
-		{
-			x = 2
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -208,11 +172,7 @@ CLOUD_LAYER
 			x = 3E-05
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 	bump_texture
 	{
@@ -227,11 +187,7 @@ CLOUD_LAYER
 			x = 3E-05
 			y = 0
 		}
-		scale
-		{
-			x = 90
-			y = 90
-		}
+		scale = 90
 	}
 }
 CLOUD_LAYER
@@ -257,11 +213,6 @@ CLOUD_LAYER
 			x = 0.002
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -276,11 +227,7 @@ CLOUD_LAYER
 			x = 0.002
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 }
 CLOUD_LAYER
@@ -306,11 +253,6 @@ CLOUD_LAYER
 			x = 0.004
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -325,11 +267,7 @@ CLOUD_LAYER
 			x = 0.004
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 }
 CLOUD_LAYER
@@ -355,11 +293,6 @@ CLOUD_LAYER
 			x = 0.001
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -374,11 +307,7 @@ CLOUD_LAYER
 			x = 0.001
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 }
 CLOUD_LAYER
@@ -404,11 +333,6 @@ CLOUD_LAYER
 			x = 0.002
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -423,11 +347,7 @@ CLOUD_LAYER
 			x = 0.002
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 }
 CLOUD_LAYER
@@ -453,11 +373,6 @@ CLOUD_LAYER
 			x = 0.0004
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -472,11 +387,7 @@ CLOUD_LAYER
 			x = 0.0004
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 }
 CLOUD_LAYER
@@ -502,11 +413,6 @@ CLOUD_LAYER
 			x = 5E-06
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -521,11 +427,7 @@ CLOUD_LAYER
 			x = 5E-06
 			y = 0
 		}
-		scale
-		{
-			x = 1000
-			y = 1000
-		}
+		scale = 1000
 	}
 }
 CLOUD_LAYER
@@ -551,11 +453,6 @@ CLOUD_LAYER
 			x = 6.5E-05
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -570,11 +467,7 @@ CLOUD_LAYER
 			x = 6.5E-05
 			y = 0
 		}
-		scale
-		{
-			x = 1000
-			y = 1000
-		}
+		scale = 1000
 	}
 }
 CLOUD_LAYER
@@ -600,11 +493,6 @@ CLOUD_LAYER
 			x = 2E-05
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -619,11 +507,7 @@ CLOUD_LAYER
 			x = 2E-05
 			y = 0
 		}
-		scale
-		{
-			x = 1000
-			y = 1000
-		}
+		scale = 1000
 	}
 }
 
@@ -646,11 +530,6 @@ CLOUD_LAYER
 			x = .000030
 			y = 0
 		}
-		scale
-		{
-			x = 2
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -665,11 +544,7 @@ CLOUD_LAYER
 			x = .000030
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 	color
 	{
@@ -696,11 +571,6 @@ CLOUD_LAYER
 			x = .000025
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -715,11 +585,7 @@ CLOUD_LAYER
 			x = .000025
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 	bump_texture
 	{
@@ -734,11 +600,7 @@ CLOUD_LAYER
 			x = .000025
 			y = 0
 		}
-		scale
-		{
-			x = 90
-			y = 90
-		}
+		scale = 90
 	}
 	color
 	{
@@ -765,11 +627,6 @@ CLOUD_LAYER
 			x = .000030
 			y = 0
 		}
-		scale
-		{
-			x = 2
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -784,11 +641,7 @@ CLOUD_LAYER
 			x = .000030
 			y = 0
 		}
-		scale
-		{
-			x = 100
-			y = 100
-		}
+		scale = 100
 	}
 	bump_texture
 	{
@@ -803,11 +656,7 @@ CLOUD_LAYER
 			x = .000025
 			y = 0
 		}
-		scale
-		{
-			x = 90
-			y = 90
-		}
+		scale = 90
 	}
 	color
 	{
@@ -834,11 +683,6 @@ CLOUD_LAYER
 			x = .000005
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -853,11 +697,7 @@ CLOUD_LAYER
 			x = .000005
 			y = 0
 		}
-		scale
-		{
-			x = 1000
-			y = 1000
-		}
+		scale = 1000
 	}
 	color
 	{
@@ -884,11 +724,6 @@ CLOUD_LAYER
 			x = .000065
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -903,11 +738,7 @@ CLOUD_LAYER
 			x = .000065
 			y = 0
 		}
-		scale
-		{
-			x = 1000
-			y = 1000
-		}
+		scale = 1000
 	}
 	color
 	{
@@ -934,11 +765,6 @@ CLOUD_LAYER
 			x = .00002
 			y = 0
 		}
-		scale
-		{
-			x = 1
-			y = 1
-		}
 	}
 	detail_texture
 	{
@@ -953,11 +779,7 @@ CLOUD_LAYER
 			x = .00002
 			y = 0
 		}
-		scale
-		{
-			x = 1000
-			y = 1000
-		}
+		scale = 1000
 	}
 	color
 	{
