--- a/GameData/BoulderCo/CityLights/cityLights.cfg
+++ b/GameData/BoulderCo/CityLights/cityLights.cfg
@@ -1,18 +1,13 @@
 CITY_LIGHTS
 {
-	radius = 1.00
+	radius = 1.01
 	main_texture
 	{
 		file = BoulderCo/CityLights/Textures/main
 		offset
 		{
-			x = -.25
-			y = 0
-		}
-		scale
-		{
-			x = 1
-			y = 1
+			x = 0
+			y = .5
 		}
 	}
 	detail_texture
@@ -23,10 +18,6 @@ CITY_LIGHTS
 			x = 0
 			y = 0
 		}
-		scale
-		{
-			x = 140
-			y = 140
-		}
+		scale = 100
 	}
 }
