Fleshing Out PQS Changes
GUI Mapping
Shader floats
Added distance fading for clipsafe

--- a/GameData/BoulderCo/CityLights/cityLights.cfg
+++ b/GameData/BoulderCo/CityLights/cityLights.cfg
@@ -1,6 +1,8 @@
 CITY_LIGHTS
 {
 	radius = 1.001
+	fadeDistance = .01
+	pqsFadeDistance = .002
 	main_texture
 	{
 		file = BoulderCo/CityLights/Textures/main
@@ -18,6 +20,6 @@ CITY_LIGHTS
 			x = 0
 			y = 0
 		}
-		scale = 80
+		scale = 60
 	}
 }
