Working on final config tweaks. Almost ready.

--- a/GameData/BoulderCo/Clouds/cloudLayers.cfg
+++ b/GameData/BoulderCo/Clouds/cloudLayers.cfg
@@ -3,7 +3,7 @@ GUI_KEYCODE = N
 CLOUD_LAYER
 {
 	body = Laythe
-	radius = 1.006
+	altitude = 6000
 	color
 	{
 		r = 0.4
@@ -44,7 +44,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Duna
-	radius = 1.03
+	altitude = 8000
 	color
 	{
 		r = 0.38
@@ -85,7 +85,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Kerbin
-	radius = 4000
+	altitude = 4000
 	color
 	{
 		r = 1
@@ -103,7 +103,7 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 2.5E-05
+			x = -2.5E-05
 			y = 0
 		}
 	}
@@ -120,7 +120,7 @@ CLOUD_LAYER
 			x = 2.6E-05
 			y = 0
 		}
-		scale = 100
+		scale = 210
 	}
 	bump_texture
 	{
@@ -141,7 +141,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Eve
-	radius = 1.004
+	altitude = 4000
 	color
 	{
 		r = 0.314
@@ -159,7 +159,7 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.002
+			x = -0.00002
 			y = 0
 		}
 	}
@@ -173,8 +173,8 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.002
-			y = 0
+			x = -0.0001
+			y = -0.0001
 		}
 		scale = 100
 	}
@@ -182,7 +182,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Eve
-	radius = 1.02
+	altitude = 6000
 	color
 	{
 		r = 0.314
@@ -200,8 +200,8 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.004
-			y = 0
+			x = -0.00004
+			y = 0.00001
 		}
 	}
 	detail_texture
@@ -214,8 +214,8 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.004
-			y = 0
+			x = -0.00001
+			y = 0.00001
 		}
 		scale = 100
 	}
@@ -223,7 +223,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Eve
-	radius = 1.027
+	altitude = 8000
 	color
 	{
 		r = 0.411
@@ -241,7 +241,7 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.001
+			x = -0.00001
 			y = 0
 		}
 	}
@@ -255,7 +255,7 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.001
+			x = -0.00001
 			y = 0
 		}
 		scale = 100
@@ -264,7 +264,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Eve
-	radius = 1.035
+	altitude = 10000
 	color
 	{
 		r = 0.411
@@ -282,7 +282,7 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.002
+			x = -0.00002
 			y = 0
 		}
 	}
@@ -296,7 +296,7 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.002
+			x = -0.00002
 			y = 0
 		}
 		scale = 100
@@ -305,7 +305,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Eve
-	radius = 1.042
+	altitude = 12000
 	color
 	{
 		r = 0.643
@@ -323,7 +323,7 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.0004
+			x = -0.000004
 			y = 0
 		}
 	}
@@ -337,7 +337,7 @@ CLOUD_LAYER
 		}
 		speed
 		{
-			x = 0.0004
+			x = -0.000004
 			y = 0
 		}
 		scale = 100
@@ -346,7 +346,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Jool
-	radius = 1.008
+	altitude = 4000
 	color
 	{
 		r = 0.102
@@ -387,7 +387,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Jool
-	radius = 1.013
+	altitude = 4000
 	color
 	{
 		r = 0.102
@@ -428,7 +428,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Jool
-	radius = 1.018
+	altitude = 4000
 	color
 	{
 		r = 0.102
@@ -472,7 +472,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Skelton
-	radius = 1.03
+	altitude = 5000
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/duna1
@@ -514,7 +514,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Erin
-	radius = 1.004
+	altitude = 4000
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/kerbin1
@@ -571,7 +571,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Sentar
-	radius = 1.008
+	altitude = 4000
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/jool1
@@ -613,7 +613,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Sentar
-	radius = 1.013
+	altitude = 4000
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/joolLayers1
@@ -655,7 +655,7 @@ CLOUD_LAYER
 CLOUD_LAYER
 {
 	body = Sentar
-	radius = 1.018
+	altitude = 4000
 	main_texture
 	{
 		file = BoulderCo/Clouds/Textures/joolLayers2
