Settings look good. PQS is operational.

--- a/GameData/BoulderCo/CityLights/cityLights.cfg
+++ b/GameData/BoulderCo/CityLights/cityLights.cfg
@@ -1,8 +1,8 @@
 CITY_LIGHTS
 {
 	altitude = 100
-	fadeDistance = 1
-	pqsFadeDistance = .001
+	fadeDistance = 0
+	pqsFadeDistance = 500
 	main_texture
 	{
 		file = BoulderCo/CityLights/Textures/main
